@@ -14,10 +14,12 @@ if (! defined ( "ICMS_ROOT_PATH" )) {
 	die ( "ImpressCMS root path not defined" );
 }
 
-global $icmsConfig, $icmsUser;
+global $icmsConfig, $icmsUser, $xoopsOption;
 
 $allowed = false;
-if (is_object ( $icmsUser )) {
+if (isset($xoopsOption['ignore_closed_site']) && $xoopsOption['ignore_closed_site']) {
+	$allowed = true;
+} elseif (is_object ( $icmsUser )) {
 	foreach ( $icmsUser->getGroups () as $group ) {
 		if (in_array ( $group, $icmsConfig ['closesite_okgrp'] ) || ICMS_GROUP_ADMIN == $group) {
 			$allowed = true;
